# Wa7erRAG

./: .env.example  .gitignore  README.md  README.zh-CN.md  environment.yml  pyproject.toml  科研指导skill.md
apps/api/app/: main.py
apps/api/app/api/: dependencies.py  router.py
apps/web/: package-lock.json  package.json
apps/web/app/: layout.tsx  page.tsx  styles.css
configs/: cleaning_rules.yaml  rag.yaml
deploy/docker/: Dockerfile.api  Dockerfile.web  docker-compose.milvus.yml  docker-compose.yml
deploy/kubernetes/: README.md  api.yaml  reranker.yaml  web.yaml
deploy/monitoring/: README.md  prometheus.yml
docs/: MILVUS_DOCKER.md  SECURITY.md  architecture.md  data-governance.md
evaluation/: README.md  dataset.example.json  dataset.json  dataset.review.json  evaluate.py
migrations/: 001_initial.sql  002_security_multitenancy.sql
pipelines/: README.md  governance.py  ingest.py  migrate_milvus_hybrid.py
scripts/: create_env.cmd  evaluate.cmd  governance.cmd  ingest.cmd  install_dev.cmd  migrate_milvus_hybrid.cmd  run_api.cmd  run_web.cmd  start_all.cmd  start_milvus.cmd  stop_all.cmd  stop_milvus.cmd  test.cmd
tests/integration/: test_api_distributed.py  test_governance_api.py  test_rag_flow.py
tests/unit/: test_chat_sessions.py  test_chunker.py  test_cleaning.py  test_config.py  test_distributed.py  test_governance.py  test_http_reranker.py  test_hyde.py  test_object_store_security.py  test_pdf_parser.py  test_query_rewrite.py  test_retrieval.py  test_retrieval_router.py  test_retrieval_routing.py  test_security.py  test_tenant_isolation.py
(+17 files in other folders)
