[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enterprise-rag"
version = "0.1.0"
description = "Production-oriented enterprise RAG platform"
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi>=0.115,<1.0", "uvicorn[standard]>=0.30,<1.0", "pydantic>=2.8,<3.0",
  "pydantic-settings>=2.4,<3.0", "httpx>=0.27,<1.0", "python-multipart>=0.0.9,<1.0",
  "python-docx>=1.1,<2.0", "markdownify>=0.13,<1.0", "beautifulsoup4>=4.12,<5.0",
  "sqlalchemy[asyncio]>=2.0,<3.0", "asyncpg>=0.29,<1.0", "redis>=5.0,<6.0",
  "pymilvus>=2.4,<3.0", "minio>=7.2,<8.0", "prometheus-client>=0.20,<1.0",
  "tenacity>=8.5,<10.0", "structlog>=24.4,<26.0"
]

[project.optional-dependencies]
dev = ["pytest>=8.3,<9.0", "pytest-asyncio>=0.24,<1.0", "pytest-cov>=5.0,<7.0", "ruff>=0.6,<1.0", "mypy>=1.11,<2.0"]

[tool.setuptools]
package-dir = {"" = "packages/rag_core/src"}

[tool.setuptools.packages.find]
where = ["packages/rag_core/src"]

[tool.pytest.ini_options]
pythonpath = ["packages/rag_core/src", "apps/api"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["rag_core"]
